--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "inventory",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "license": "MIT",
     "angular-cli": {},
     "author": "Antonio Marcello (imantoniomarcello@gmail.com)",
@@ -13,36 +13,44 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/common": "~2.1.0",
-        "@angular/compiler": "~2.1.0",
-        "@angular/core": "~2.1.0",
-        "@angular/forms": "~2.1.0",
-        "@angular/http": "~2.1.0",
-        "@angular/platform-browser": "~2.1.0",
-        "@angular/platform-browser-dynamic": "~2.1.0",
-        "@angular/router": "~3.1.0",
+        "@angular/animations": "^5.0.0",
+        "@angular/common": "^5.0.0",
+        "@angular/compiler": "^5.0.0",
+        "@angular/core": "^5.0.0",
+        "@angular/forms": "^5.0.0",
+        "@angular/http": "^5.0.0",
+        "@angular/platform-browser": "^5.0.0",
+        "@angular/platform-browser-dynamic": "^5.0.0",
+        "@angular/router": "^5.0.0",
         "core-js": "^2.4.1",
-        "rxjs": "5.0.0-beta.12",
+        "rxjs": "^5.5.2",
         "ts-helpers": "^1.1.1",
-        "zone.js": "^0.6.23"
+        "zone.js": "^0.8.14"
     },
     "devDependencies": {
-        "@types/jasmine": "^2.2.30",
-        "@types/node": "^6.0.42",
-        "angular-cli": "1.0.0-beta.19-3",
-        "bootstrap": "^4.0.0-alpha.5",
-        "codelyzer": "1.0.0-beta.1",
-        "jasmine-core": "2.4.1",
-        "jasmine-spec-reporter": "2.5.0",
-        "karma": "1.2.0",
-        "karma-chrome-launcher": "^2.0.0",
-        "karma-cli": "^1.0.1",
-        "karma-jasmine": "^1.0.2",
-        "karma-remap-istanbul": "^0.2.1",
-        "protractor": "4.0.9",
-        "ts-node": "1.2.1",
-        "tslint": "3.13.0",
-        "typescript": "~2.0.3",
-        "webdriver-manager": "10.2.5"
+        "@angular/cli": "^1.6.0",
+        "@angular/compiler-cli": "^5.0.0",
+        "@angular/language-service": "^5.0.0",
+        "@types/jasmine": "~2.8.6",
+        "@types/jasminewd2": "~2.0.2",
+        "@types/node": "~9.4.0",
+        "bootstrap": "4.0.0",
+        "codelyzer": "~4.1.0",
+        "jasmine-core": "~2.9.1",
+        "jasmine-spec-reporter": "~4.2.1",
+        "jquery": "1.9.1",
+        "karma": "~2.0.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-cli": "~1.0.1",
+        "karma-coverage-istanbul-reporter": "^1.2.1",
+        "karma-jasmine": "~1.1.0",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "popper.js": "1.12.9",
+        "protractor": "~5.3.0",
+        "ts-node": "~4.1.0",
+        "tslint": "~5.9.1",
+        "typescript": "^2.6.2",
+        "webdriver-manager": "12.0.6",
+        "webpack": "^3.10.0"
     }
 }
